Outwards model revisted
TODO remove `framework.deduction` from module-info.java files if possible